--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,15 +24,26 @@
             </intent-filter>
         </activity>
 
+        <!--        <service-->
+        <!--            android:name="com.romellfudi.ussdlibrary.USSDServiceKT"-->
+        <!--            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.accessibilityservice.AccessibilityService" />-->
+        <!--            </intent-filter>-->
+        <!--            <meta-data-->
+        <!--                android:name="android.accessibilityservice"-->
+        <!--                android:resource="@xml/ussd_service" />-->
+        <!--        </service>-->
+
         <service
-            android:name="com.romellfudi.ussdlibrary.USSDServiceKT"
+            android:name=".MyUSSDServiceKT"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
             <meta-data
                 android:name="android.accessibilityservice"
-                android:resource="@xml/ussd_service" />
+                android:resource="@xml/my_ussd_service" />
         </service>
     </application>
 
