--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.NovissiActivity"
+            android:label="@string/title_activity_novissi"
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -25,17 +30,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!--        <service-->
-        <!--            android:name="com.romellfudi.ussdlibrary.USSDServiceKT"-->
-        <!--            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">-->
-        <!--            <intent-filter>-->
-        <!--                <action android:name="android.accessibilityservice.AccessibilityService" />-->
-        <!--            </intent-filter>-->
-        <!--            <meta-data-->
-        <!--                android:name="android.accessibilityservice"-->
-        <!--                android:resource="@xml/ussd_service" />-->
-        <!--        </service>-->
 
         <service
             android:name=".ussd.MyUSSDServiceKT"
